packages/ncurses/ncurses.h

/* These are defined only in curses.h, and are used for conditional compiles */
#define NCURSES_VERSION_MAJOR 3
#define NCURSES_VERSION_MINOR 0
#define NCURSES_VERSION_PATCH 980228
#define NCURSES_VERSION "3.0"
/*
#ifdef NCURSES_NOMACROS
#define NCURSES_ATTR_T attr_t
#endif

#ifndef NCURSES_ATTR_T
#define NCURSES_ATTR_T int
#endif

#ifndef NCURSES_CONST
#define NCURSES_CONST 
#endif
*/

typedef unsigned long chtype;
#define CXX_BUILTIN_BOOL 1
/*
#define CXX_TYPE_OF_BOOL char
*/

/* colors */
extern int COLORS;
extern int COLOR_PAIRS;
#define COLOR_BLACK	0
#define COLOR_RED	1
#define COLOR_GREEN	2
#define COLOR_YELLOW	3
#define COLOR_BLUE	4
#define COLOR_MAGENTA	5
#define COLOR_CYAN	6
#define COLOR_WHITE	7
/* line graphics */

/*
extern	chtype acs_map[];
*/

/* VT100 symbols begin here */

/*
#define ACS_ULCORNER	(acs_map['l'])	
#define ACS_LLCORNER	(acs_map['m'])	
#define ACS_URCORNER	(acs_map['k'])	
#define ACS_LRCORNER	(acs_map['j'])	
#define ACS_LTEE	(acs_map['t'])	
#define ACS_RTEE	(acs_map['u'])	
#define ACS_BTEE	(acs_map['v'])	
#define ACS_TTEE	(acs_map['w'])	
#define ACS_HLINE	(acs_map['q'])	
#define ACS_VLINE	(acs_map['x'])	
#define ACS_PLUS	(acs_map['n'])	
#define ACS_S1		(acs_map['o'])	
#define ACS_S9		(acs_map['s'])	
#define ACS_DIAMOND	(acs_map['`'])	
#define ACS_CKBOARD	(acs_map['a'])	
#define ACS_DEGREE	(acs_map['f'])	
#define ACS_PLMINUS	(acs_map['g'])	
#define ACS_BULLET	(acs_map['~'])	

#define ACS_LARROW	(acs_map[','])	
#define ACS_RARROW	(acs_map['+'])	
#define ACS_DARROW	(acs_map['.'])	
#define ACS_UARROW	(acs_map['-'])	
#define ACS_BOARD	(acs_map['h'])	
#define ACS_LANTERN	(acs_map['i'])	
#define ACS_BLOCK	(acs_map['0'])	
#define ACS_S3		(acs_map['p'])	
#define ACS_S7		(acs_map['r'])	
#define ACS_LEQUAL	(acs_map['y'])	
#define ACS_GEQUAL	(acs_map['z'])	
#define ACS_PI		(acs_map['{'])	
#define ACS_NEQUAL	(acs_map['|'])	
#define ACS_STERLING	(acs_map['}'])	
*/

/*
 * Line drawing ACS names are of the form ACS_trbl, where t is the top, r
 * is the right, b is the bottom, and l is the left.  t, r, b, and l might
 * be B (blank), S (single), D (double), or T (thick).  The subset defined
 * here only uses B and S.
 */
/*
#define ACS_BSSB	ACS_ULCORNER
#define ACS_SSBB	ACS_LLCORNER
#define ACS_BBSS	ACS_URCORNER
#define ACS_SBBS	ACS_LRCORNER
#define ACS_SBSS	ACS_RTEE
#define ACS_SSSB	ACS_LTEE
#define ACS_SSBS	ACS_BTEE
#define ACS_BSSS	ACS_TTEE
#define ACS_BSBS	ACS_HLINE
#define ACS_SBSB	ACS_VLINE
#define ACS_SSSS	ACS_PLUS
*/

#define ERR     (-1)
#define OK      (0)
#define _SUBWIN         0x01	
#define _ENDLINE        0x02	
#define _FULLWIN        0x04	
#define _SCROLLWIN      0x08	
#define _ISPAD	        0x10	
#define _HASMOVED       0x20	
#define _WRAPPED        0x40	
/*
 * this value is used in the firstchar and lastchar fields to mark
 * unchanged lines
 */
#define _NOCHANGE       -1
/*
 * this value is used in the oldindex field to mark lines created by insertions
 * and scrolls.
 */
#define _NEWINDEX	-1
/*
typedef struct screen  SCREEN;
typedef struct _win_st WINDOW;
*/

typedef	chtype	attr_t;
		

struct ldat
{
	chtype  *text;		
	short   firstchar;	
	short   lastchar;	
	short   oldindex;	
};
struct _win_st
{
	short   _cury, _curx;	
	short   _maxy, _maxx;	
	short   _begy, _begx;	
	short   _flags;		
	attr_t  _attrs;		
	chtype  _bkgd;		
	bool	_notimeout;	
	bool    _clear;		
	bool    _leaveok;	
	bool    _scroll;	
	bool    _idlok;		
	bool    _idcok;		
	bool	_immed;		
	bool	_sync;		
	bool    _use_keypad;    
	int	_delay;		
	struct ldat *_line;	
	short	_regtop;	
	short	_regbottom;	
	int	_parx;		
	int	_pary;		
	WINDOW	*_parent;	
	struct pdat
	{
	    short _pad_y,      _pad_x;
	    short _pad_top,    _pad_left;
	    short _pad_bottom, _pad_right;
	} _pad;

	short   _yoffset;	
};
extern WINDOW   *stdscr;
extern WINDOW   *curscr;
extern WINDOW   *newscr;
extern int	LINES;
extern int	COLS;
extern int	TABSIZE;
/*
 * This global was an undocumented feature under AIX curses.
 */
extern int ESCDELAY;
	


extern int define_key (char *, int);
extern int keyok (int, bool);
extern int resizeterm (int, int);
extern int use_default_colors (void);
extern int wresize (WINDOW *, int, int);
/*
extern char ttytype[];		
*/

extern int baudrate(void);
				
extern int beep(void);
					
extern bool can_change_color(void);
			
extern int cbreak(void);
				
extern int clearok(WINDOW *,bool);
			
extern int color_content(short,short*,short*,short*);
	
extern int copywin(const WINDOW*,WINDOW*,int,int,int,int,int,int,int);
	
extern int curs_set(int);
				
extern int def_prog_mode(void);
				
extern int def_shell_mode(void);
			
extern int delay_output(int);
				
extern void delscreen(SCREEN *);
			
extern int delwin(WINDOW *);
	
extern int doupdate(void);
			
extern int echo(void);
					
extern int endwin(void);
				
extern char erasechar(void);
				
extern void filter(void);
				
extern int flash(void);
					
extern int flushinp(void);
				
extern int halfdelay(int);
				
extern bool has_colors(void);
				
extern int has_ic(void);
				
extern int has_il(void);
				
extern void idcok(WINDOW *, bool);
			
extern int idlok(WINDOW *, bool);
			
extern void immedok(WINDOW *, bool);
				
extern int init_color(short,short,short,short);
		
extern int init_pair(short,short,short);
		
extern int intrflush(WINDOW *,bool);
			
extern int isendwin(void);
				
extern int is_linetouched(WINDOW *,int);
		
extern int is_wintouched(WINDOW *);
			
extern int keypad(WINDOW *,bool);
			
extern char killchar(void);
				
extern int leaveok(WINDOW *,bool);
				
extern int meta(WINDOW *,bool);
				
extern int mvcur(int,int,int,int);
			
extern int mvderwin(WINDOW *, int, int);
		
/*
extern int mvprintw(int,int,const char *,...)		
		GCC_PRINTFLIKE(3,4);
extern int mvscanw(int,int,const char *,...)		
		GCC_SCANFLIKE(3,4);
*/
extern int mvwin(WINDOW *,int,int);
			
/*
extern int mvwprintw(WINDOW*,int,int,const char *,...)	
		GCC_PRINTFLIKE(4,5);
extern int mvwscanw(WINDOW *,int,int,const char *,...)	
		GCC_SCANFLIKE(4,5);
*/
extern int napms(int);
			
extern int nl(void);
					
extern int nocbreak(void);
				
extern int nodelay(WINDOW *,bool);
			
extern int noecho(void);
				
extern int nonl(void);
					
extern int noqiflush(void);
				
extern int noraw(void);
					
extern int notimeout(WINDOW *,bool);
			
extern int overlay(const WINDOW*,WINDOW *);
		
extern int overwrite(const WINDOW*,WINDOW *);
		
extern int pair_content(short,short*,short*);
		
extern int pechochar(WINDOW *, const chtype);
		
extern int pnoutrefresh(WINDOW*,int,int,int,int,int,int);
extern int prefresh(WINDOW *,int,int,int,int,int,int);
	
/*
extern int printw(const char *,...)			
		GCC_PRINTFLIKE(1,2);
*/
extern int putp(const char *);
				
extern int putwin(WINDOW *, FILE *);
			
extern int qiflush(void);
				
extern int raw(void);
					
extern int resetty(void);
				
extern int reset_prog_mode(void);
			
extern int reset_shell_mode(void);
			
extern int ripoffline(int, int (*init)(WINDOW *, int));
	
extern int savetty(void);
				
/*
extern int scanw(const char *,...)			
		GCC_SCANFLIKE(1,2);
*/
extern int scr_dump(const char *);
			
extern int scr_init(const char *);
			
extern int scrollok(WINDOW *,bool);
			
extern int scr_restore(const char *);
			
extern int scr_set(const char *);
			
extern int slk_attroff(const attr_t);
			
extern int slk_attron(const attr_t);
			
extern int slk_attrset(const attr_t);
			
extern attr_t slk_attr(void);
                           
extern int slk_clear(void);
				
extern int slk_init(int);
				
extern int slk_noutrefresh(void);
			
extern int slk_refresh(void);
				
extern int slk_restore(void);
				
extern int slk_set(int,const char *,int);
		
extern int slk_touch(void);
				
extern int start_color(void);
				
extern int vidputs(chtype, int (*)(int));