packages/extra/ncurses/ncurses.pp

{
    $Id$
    Copyright (c) 1998 by Michael Van Canneyt
    member of the Free Pascal development team

    Unit to access the ncurses library

    See the file COPYING.FPC included in this distribution,
    for details about the copyright.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

 **********************************************************************}

{
  Many thanks to Ken Wright for his patches !
}
unit ncurses;
interface

{$packrecords C}
{$ifdef OpenBSD}		// openbsd curses=ncurses. Openbsd ocurses=old curses.
{$linklib curses}
{$else}
{$linklib ncurses}
{$endif}
{$linklib c}

{ Manually Added types }
Type
  Bool = byte;
  PINTEGER = ^Longint;
  PLongint = ^ longint;
  PFILE = pointer;

const
  NCURSES_VERSION_MAJOR = 5;
  NCURSES_VERSION_MINOR = 0;
  NCURSES_VERSION_PATCH = 19991023;
  NCURSES_VERSION = '5.0';

type
  chtype  = longint;
  pchtype = pchar;

const
  CXX_BUILTIN_BOOL = 1;
type
  CXX_TYPE_OF_BOOL = char;

Var
    COLORS : longint; cvar; external;
    COLOR_PAIRS : longint; cvar; external;

    const
       COLOR_BLACK = 0;
       COLOR_RED = 1;
       COLOR_GREEN = 2;
       COLOR_YELLOW = 3;
       COLOR_BLUE = 4;
       COLOR_MAGENTA = 5;
       COLOR_CYAN = 6;
       COLOR_WHITE = 7;

Type
    tacs_map = array [char] of chtype;
    pacs_map = ^tacs_map;

Var
    acs_map : tacs_map; cvar; external;

    function ACS_ULCORNER : chtype;
    function ACS_LLCORNER : chtype;
    function ACS_URCORNER : chtype;
    function ACS_LRCORNER : chtype;
    function ACS_LTEE : chtype;
    function ACS_RTEE : chtype;
    function ACS_BTEE : chtype;
    function ACS_TTEE : chtype;
    function ACS_HLINE : chtype;
    function ACS_VLINE : chtype;
    function ACS_PLUS : chtype;
    function ACS_S1      : chtype;
    function ACS_S9      : chtype;
    function ACS_DIAMOND : chtype;
    function ACS_CKBOARD : chtype;
    function ACS_DEGREE : chtype;
    function ACS_PLMINUS : chtype;
    function ACS_BULLET : chtype;
    function ACS_LARROW : chtype;
    function ACS_RARROW : chtype;
    function ACS_DARROW : chtype;
    function ACS_UARROW : chtype;
    function ACS_BOARD : chtype;
    function ACS_LANTERN : chtype;
    function ACS_BLOCK : chtype;
    function ACS_S3      : chtype;
    function ACS_S7      : chtype;
    function ACS_LEQUAL : chtype;
    function ACS_GEQUAL : chtype;
    function ACS_PI      : chtype;
    function ACS_NEQUAL : chtype;
    function ACS_STERLING : chtype;
    {
       Line drawing ACS names are of the form ACS_trbl, where t is the top, r
       is the right, b is the bottom, and l is the left.  t, r, b, and l might
       be B (blank), S (single), D (double), or T (thick).  The subset defined
       here only uses B and S.
     }
    {
    #define ACS_BSSB    ACS_ULCORNER
    #define ACS_SSBB    ACS_LLCORNER
    #define ACS_BBSS    ACS_URCORNER
    #define ACS_SBBS    ACS_LRCORNER
    #define ACS_SBSS    ACS_RTEE
    #define ACS_SSSB    ACS_LTEE
    #define ACS_SSBS    ACS_BTEE
    #define ACS_BSSS    ACS_TTEE
    #define ACS_BSBS    ACS_HLINE
    #define ACS_SBSB    ACS_VLINE
    #define ACS_SSSS    ACS_PLUS
    }
    Const
       ERR = -(1);
       OK = 0;
       _SUBWIN = $01;
       _ENDLINE = $02;
       _FULLWIN = $04;
       _SCROLLWIN = $08;
       _ISPAD = $10;
       _HASMOVED = $20;
       _WRAPPED = $40;
    {
       this value is used in the firstchar and lastchar fields to mark
       unchanged lines
     }
       _NOCHANGE = -(1);
    {
       this value is used in the oldindex field to mark lines created by insertions
       and scrolls.
     }
       _NEWINDEX = -(1);
    {
    typedef struct screen  SCREEN;
    typedef struct _win_st WINDOW;
    }

    type

       attr_t = chtype;
       ldat = record
            text : ^chtype;
            firstchar : integer;
            lastchar : integer;
            oldindex : integer;
         end;

       _win_st = record
            _cury : integer;
            _curx : integer;
            _maxy : integer;
            _maxx : integer;
            _begy : integer;
            _begx : integer;
            _flags : integer;
            _attrs : attr_t;
            _bkgd : chtype;
            _notimeout : bool;
            _clear : bool;
            _leaveok : bool;
            _scroll : bool;
            _idlok : bool;
            _idcok : bool;
            _immed : bool;
            _sync : bool;
            _use_keypad : bool;
            _delay : longint;
            _line : ^ldat;
            _regtop : integer;
            _regbottom : integer;
            _parx : longint;
            _pary : longint;
            _parent : ^WINDOW;
            _pad : record
                 _pad_y : integer;
                 _pad_x : integer;
                 _pad_top : integer;
                 _pad_left : integer;
                 _pad_bottom : integer;
                 _pad_right : integer;
              end;
            _yoffset : integer;
         end;
        WINDOW = _win_st;
        PWINDOW = ^WINDOW;
       SCREEN=WINDOW;
       PSCREEN = PWINDOW;

      var
       stdscr  : PWINDOW; cvar; external;
       curscr  : PWINDOW; cvar; external;
       newscr  : PWINDOW; cvar; external;
       LINES   : longint; cvar; external; 
       COLS    : longint; cvar; external; 
       TABSIZE : longint; cvar; external;
       ESCDELAY: longint; cvar; external;

    Function define_key(_para1:pchar; _para2:longint):longint; cdecl;external;
    Function keyok(_para1:longint; _para2:bool):longint; cdecl;external;
    Function resizeterm(_para1:longint; _para2:longint):longint; cdecl;external;
    Function use_default_colors:longint; cdecl;external;
    Function wresize(_para1:pWINDOW; _para2:longint; _para3:longint):longint; cdecl;external;
    {
    extern char ttytype[];
    }
    Function baudrate:longint; cdecl;external;
    Function beep:longint; cdecl;external;
    Function can_change_color:bool; cdecl;external;
    Function cbreak:longint; cdecl;external;
    Function clearok(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    Function color_content(_para1:longint; _para2:plongint; _para3:plongint; _para4:plongint):longint; cdecl;external;

    Function copywin(_para1:pWINDOW; _para2:pWINDOW; _para3:longint; _para4:longint; _para5:longint;
               _para6:longint; _para7:longint; _para8:longint; _para9:longint):longint;cdecl;external;
    Function curs_set(_para1:longint):longint; cdecl;external;
    Function def_prog_mode:longint; cdecl;external;
    Function def_shell_mode:longint; cdecl;external;
    Function delay_output(_para1:longint):longint; cdecl;external;
    procedure delscreen(_para1:pSCREEN);cdecl;external;
    Function delwin(_para1:pWINDOW):longint; cdecl;external;

    Function doupdate:longint; cdecl;external;

    Function echo:longint; cdecl;external;
    Function endwin:longint; cdecl;external;
    Function erasechar:char; cdecl;external;
    procedure filter;cdecl;external;
    Function flash:longint; cdecl;external;
    Function flushinp:longint; cdecl;external;

    Function halfdelay(_para1:longint):longint; cdecl;external;
    Function has_colors:bool; cdecl;external;
    Function has_ic:longint; cdecl;external;
    Function has_il:longint; cdecl;external;
    procedure idcok(_para1:pWINDOW; _para2:bool);cdecl;external;
    Function idlok(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    procedure immedok(_para1:pWINDOW; _para2:bool);cdecl;external;

    Function init_color(_para1:longint; _para2:longint; _para3:longint; _para4:longint):longint; cdecl;external;
    Function init_pair(_para1:longint; _para2:longint; _para3:longint):longint; cdecl;external;
    Function intrflush(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    Function isendwin:longint; cdecl;external;
    Function is_linetouched(_para1:pWINDOW; _para2:longint):longint; cdecl;external;
    Function is_wintouched(_para1:pWINDOW):longint; cdecl;external;


    Function keypad(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    Function killchar:char; cdecl;external;
    Function leaveok(_para1:pWINDOW; _para2:bool):longint; cdecl;external;

    Function meta(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    Function mvcur(_para1:longint; _para2:longint; _para3:longint; _para4:longint):longint; cdecl;external;
    Function mvderwin(_para1:pWINDOW; _para2:longint; _para3:longint):longint; cdecl;external;
    {
    extern int mvprintw(int,int,const char  ,...)
                GCC_PRINTFLIKE(3,4);
    extern int mvscanw(int,int,const char  ,...)
                GCC_SCANFLIKE(3,4);
    }
    Function mvwin(_para1:pWINDOW; _para2:longint; _para3:longint):longint; cdecl;external;
    {
    extern int mvwprintw(WINDOW ,int,int,const char  ,...)
                GCC_PRINTFLIKE(4,5);
    extern int mvwscanw(WINDOW  ,int,int,const char  ,...)
                GCC_SCANFLIKE(4,5);
    }
    Function napms(_para1:longint):longint; cdecl;external;

    Function nl:longint; cdecl;external;
    Function nocbreak:longint; cdecl;external;
    Function nodelay(_para1:pWINDOW; _para2:bool):longint; cdecl;external;
    Function noecho:longint; cdecl;external;
    Function nonl:longint; cdecl;external;
    Function noqiflush:longint; cdecl;external;
    Function noraw:longint; cdecl;external;
    Function notimeout(_para1:pWINDOW; _para2:bool):longint; cdecl;external;

    Function overlay(_para1:pWINDOW; _para2:pWINDOW):longint; cdecl;external;

    Function overwrite(_para1:pWINDOW; _para2:pWINDOW):longint; cdecl;external;
    Function pair_content(_para1:longint; _para2:plongint; _para3:plongint):longint; cdecl;external;

    Function pechochar(_para1:pWINDOW; _para2:chtype):longint; cdecl;external;
    Function pnoutrefresh(_para1:pWINDOW; _para2:longint; _para3:longint; _para4:longint; _para5:longint;
               _para6:longint; _para7:longint):longint;cdecl;external;
    Function prefresh(_para1:pWINDOW; _para2:longint; _para3:longint; _para4:longint; _para5:longint;
               _para6:longint; _para7:longint):longint;cdecl;external;
    {
    extern int printw(const char  ,...)
                GCC_PRINTFLIKE(1,2);
    }
    Function putp(_para1:pchar):longint; cdecl;external;
    Function putwin(_para1:pWINDOW; _para2:pFILE):longint; cdecl;external;
    Function qiflush:longint; cdecl;external;
    Function raw:longint; cdecl;external;
    Function resetty:longint; cdecl;external;
    Function reset_prog_mode:longint; cdecl;external;
    Function reset_shell_mode:longint; cdecl;external;
{
    Function ripoffline(_para1:longint; init:function (_para1:pWINDOW; _para2:longint):longint):longint; cdecl;external;
}
    Function savetty:longint; cdecl;external;
    {
    extern int scanw(const char  ,...)
                GCC_SCANFLIKE(1,2);
    }
    Function scr_dump(_para1:pchar):longint; cdecl;external;

    Function scr_init(_para1:pchar):longint; cdecl;external;
    Function scrollok(_para1:pWINDOW; _para2:bool):longint; cdecl;external;

    Function scr_restore(_para1:pchar):longint; cdecl;external;

    Function scr_set(_para1:pchar):longint; cdecl;external;


    Function slk_attroff(_para1:attr_t):longint; cdecl;external;

    Function slk_attron(_para1:attr_t):longint; cdecl;external;

    Function slk_attrset(_para1:attr_t):longint; cdecl;external;
    Function slk_attr:attr_t; cdecl;external;
    Function slk_clear:longint; cdecl;external;
    Function slk_init(_para1:longint):longint; cdecl;external;

    Function slk_noutrefresh:longint; cdecl;external;
    Function slk_refresh:longint; cdecl;external;
    Function slk_restore:longint; cdecl;external;

    Function slk_set(_para1:longint; _para2:pchar; _para3:longint):longint; cdecl;external;
    Function slk_touch:longint; cdecl;external;
    Function start_color:longint; cdecl;external;
